--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "mysql2": "3.9.9",
-    "pdfkit": "0.15.0"
+    "pdfkit": "0.15.0",
+    "pdfkit-table": "0.1.99"
   }
 }
