--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
     "mysql2": "3.9.9",
     "pdfkit": "0.15.0",
     "pdfkit-table": "0.1.99"
